--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,38 +1,65 @@
-# .github/workflows/cd.yml
-name: CD
+name: CD - Build and Deploy to Cloud Run
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy to Cloud Run
     runs-on: ubuntu-latest
 
     steps:
+    # Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Cloud SDK
+    # Set up Python 3.11 environment
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.11'
+
+    # Cache pip dependencies
+    - name: Cache pip dependencies
+      uses: actions/cache@v3
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+
+    # Install Python dependencies
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
+    # Authenticate to Google Cloud
+    - name: Authenticate to Google Cloud
+      uses: google-github-actions/auth@v1
+      with:
+        credentials_json: ${{ secrets.GCP_SA_KEY }}  # Service account key stored in GitHub Secrets
+
+    # Set up Google Cloud SDK
+    - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v1
       with:
-        service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
         project_id: ${{ secrets.GCP_PROJECT_ID }}
+        install_components: 'cloud-run'
 
-    - name: Build Docker image
+    # Build the Docker image and push to Google Container Registry (GCR)
+    - name: Build and push Docker image
       run: |
-        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/lengolf-bot:$GITHUB_SHA .
-    
-    - name: Push Docker image
-      run: |
-        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/lengolf-bot:$GITHUB_SHA
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/lengolf-bot .
+        echo ${{ secrets.GCP_SA_KEY }} | docker login -u _json_key --password-stdin https://gcr.io
+        docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/lengolf-bot
 
+    # Deploy to Cloud Run
     - name: Deploy to Cloud Run
       run: |
         gcloud run deploy lengolf-bot \
-          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/lengolf-bot:$GITHUB_SHA \
-          --platform managed \
+          --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/lengolf-bot \
           --region ${{ secrets.GCP_REGION }} \
-          --allow-unauthenticated \
-          --update-env-vars LINE_CHANNEL_ACCESS_TOKEN=${{ secrets.LINE_CHANNEL_ACCESS_TOKEN }},LINE_CHANNEL_SECRET=${{ secrets.LINE_CHANNEL_SECRET }},GAS_WEB_APP_URL=${{ secrets.GAS_WEB_APP_URL }},OPENAI_API_KEY=${{ secrets.OPENAI_API_KEY }}
+          --platform managed \
+          --allow-unauthenticated
